tests/should-fail/syntax/max-byte-in-comment.j

// a comment with ﹽ in it
